<resources>

    <string name="app_name">Caldecision</string>
    <string name="b_one">1</string>
    <string name="b_two">2</string>
    <string name="b_three">3</string>
    <string name="b_four">4</string>
    <string name="b_five">5</string>
    <string name="b_six">6</string>
    <string name="b_seven">7</string>
    <string name="b_eight">8</string>
    <string name="b_nine">9</string>
    <string name="b_zero">0</string>
    <string name="b_dot">.</string>
    <string name="b_del_all">C</string>
    <string name="b_multiply">x</string>
    <string name="b_plus">+</string>
    <string name="b_minus">-</string>
    <string name="b_equal">=</string>
    <string name="b_divide">/</string>
    <string name="b_sin">sin</string>
    <string name="b_cos">cos</string>
    <string name="b_tan">tan</string>
    <string name="b_in">In</string>
    <string name="b_log">log</string>
    <string name="b_number_e">e</string>
    <string name="b_del_one">DEL</string>
    <string name="b_number_pi">П</string>
    <string name="b_percent">%</string>
    <string name="b_pow">^</string>
    <string name="b_root">√</string>
    <string name="dialog_list_themes">Select a theme:</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_accept">Accept</string>
    <string name="drawer_layout_open">Open Drawer layout</string>
    <string name="drawer_layout_close">Close Drawer layout</string>

</resources>
