<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_curtain"
    android:layout_weight="1"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="NestedWeights">

            <Button
                style="@style/ButtonsNumber_dark"
                android:onClick="onAddNumber"
                android:text="@string/b_seven" />
            <Button
                style="@style/ButtonsNumber_dark"
                android:onClick="onAddNumber"
                android:text="@string/b_eight" />
            <Button
                style="@style/ButtonsNumber_dark"
                android:onClick="onAddNumber"
                android:text="@string/b_nine" />

        </LinearLayout>
        <LinearLayout
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/ButtonsNumber_dark"
                android:onClick="onAddNumber"
                android:text="@string/b_four" />
            <Button
                style="@style/ButtonsNumber_dark"
                android:onClick="onAddNumber"
                android:text="@string/b_five" />
            <Button
                style="@style/ButtonsNumber_dark"
                android:onClick="onAddNumber"
                android:text="@string/b_six" />

        </LinearLayout>
        <LinearLayout
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/ButtonsNumber_dark"
                android:onClick="onAddNumber"
                android:text="@string/b_one" />
            <Button
                style="@style/ButtonsNumber_dark"
                android:onClick="onAddNumber"
                android:text="@string/b_two" />
            <Button
                style="@style/ButtonsNumber_dark"
                android:onClick="onAddNumber"
                android:text="@string/b_three" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5">

            <Button
                style="@style/ButtonsNumber_dark"
                android:onClick="onAddNumber"
                android:text="@string/b_dot" />
            <Button
                style="@style/ButtonsNumber_dark"
                android:onClick="onAddNumber"
                android:text="@string/b_zero" />
            <Button
                style="@style/ButtonsNumber_dark"
                android:onClick="onEqual"
                android:text="@string/b_equal" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="9"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                style="@style/ButtonsNumber_light"
                android:onClick="onDelAll"
                android:text="@string/b_del_all" />
            <Button
                android:textSize="23sp"
                android:text="@string/b_del_one"
                style="@style/ButtonsNumber_light"
                android:onClick="onDel" />
            <Button
                style="@style/ButtonsNumber_light"
                android:onClick="onAddOperator"
                android:text="@string/b_divide" />
            <Button
                style="@style/ButtonsNumber_light"
                android:onClick="onAddOperator"
                android:text="@string/b_multiply" />
            <Button
                style="@style/ButtonsNumber_light"
                android:onClick="onAddOperator"
                android:text="@string/b_minus" />
            <Button
                style="@style/ButtonsNumber_light"
                android:onClick="onAddOperator"
                android:text="@string/b_plus" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_weight="11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:background="@color/colorGreenLight_not_pressed"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>