<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addition_curtain"
    android:background="@color/colorGreenLight_not_pressed"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:onClick="onSin"
            android:text="@string/b_sin"
            style="@style/ButtonsNumber_green" />
        <Button
            android:onClick="onLog"
            android:text="@string/b_log"
            style="@style/ButtonsNumber_green" />
        <Button
            android:onClick="onSqrt"
            android:text="@string/b_root"
            style="@style/ButtonsNumber_green" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:onClick="onCos"
            android:text="@string/b_cos"
            style="@style/ButtonsNumber_green" />

        <Button
            style="@style/ButtonsNumber_green"
            android:onClick="onNumberPI"
            android:text="@string/b_number_pi"/>
        <Button
            android:onClick="onPow"
            android:text="@string/b_pow"
            style="@style/ButtonsNumber_green" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:onClick="onTan"
            android:text="@string/b_tan"
            style="@style/ButtonsNumber_green" />
        <Button
            android:onClick="onNumberE"
            android:text="@string/b_number_e"
            style="@style/ButtonsNumber_green" />
        <Button
            android:onClick="onPercent"
            android:text="@string/b_percent"
            style="@style/ButtonsNumber_green" />

    </LinearLayout>

</LinearLayout>