<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addition_curtain"
    android:background="?attr/mainBackground"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:onClick="onSin"
            android:text="@string/b_sin"
            android:textColor="?attr/additionButtonTextColor"
            style="@style/ButtonsNumberGreen" />
        <Button
            android:onClick="onLog"
            android:text="@string/b_log"
            android:textColor="?attr/additionButtonTextColor"
            style="@style/ButtonsNumberGreen" />
        <Button
            android:onClick="onSqrt"
            android:text="@string/b_root"
            android:textColor="?attr/additionButtonTextColor"
            style="@style/ButtonsNumberGreen" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:onClick="onCos"
            android:text="@string/b_cos"
            android:textColor="?attr/additionButtonTextColor"
            style="@style/ButtonsNumberGreen" />
        <Button
            android:onClick="onNumberPI"
            android:text="@string/b_number_pi"
            android:textColor="?attr/additionButtonTextColor"
            style="@style/ButtonsNumberGreen"/>
        <Button
            android:onClick="onPow"
            android:text="@string/b_pow"
            android:textColor="?attr/additionButtonTextColor"
            style="@style/ButtonsNumberGreen" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:onClick="onTan"
            android:text="@string/b_tan"
            android:textColor="?attr/additionButtonTextColor"
            style="@style/ButtonsNumberGreen" />
        <Button
            android:onClick="onNumberE"
            android:text="@string/b_number_e"
            android:textColor="?attr/additionButtonTextColor"
            style="@style/ButtonsNumberGreen" />
        <Button
            android:onClick="onPercent"
            android:text="@string/b_percent"
            android:textColor="?attr/additionButtonTextColor"
            style="@style/ButtonsNumberGreen" />

    </LinearLayout>

</LinearLayout>